--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1626,8 +1626,8 @@
 		background-color: #935d8c;
 		background-image: url("images/overlay.png"), -moz-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
 		background-image: url("images/overlay.png"), -webkit-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
-		background-image: url("images/overlay.png"), -ms-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
-		background-image: url("images/overlay.png"), linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
+		background-image: url("images/overlay.png"), -ms-linear-gradient(45deg, #2B7D4E 15%, #0C3E22 85%);
+		background-image: url("images/overlay.png"), linear-gradient(45deg, #2B7D4E 15%, #0C3E22 85%);
 	}
 
 		body.is-loading *, body.is-loading *:before, body.is-loading *:after {
@@ -2017,7 +2017,7 @@
 		input[type="button"].special,
 		button.special,
 		.button.special {
-			background-color: #8cc9f0;
+			background-color: #16703d;
 			color: #ffffff !important;
 			box-shadow: none;
 		}
@@ -2344,23 +2344,23 @@
 			}
 
 		.icon.style1 {
-			color: #efa8b0;
+			color: #419D78;
 		}
 
 		.icon.style2 {
-			color: #c79cc8;
+			color: #5aae8d;
 		}
 
 		.icon.style3 {
-			color: #a89cc8;
+			color: #74bc90;
 		}
 
 		.icon.style4 {
-			color: #9bb2e1;
+			color: #074F57;
 		}
 
 		.icon.style5 {
-			color: #8cc9f0;
+			color: #16703d;
 		}
 
 		@media screen and (max-width: 1680px) {
@@ -2912,23 +2912,23 @@
 		}
 
 			.statistics li.style1 {
-				background-color: #efa8b0;
+				background-color: #419D78;
 			}
 
 			.statistics li.style2 {
-				background-color: #c79cc8;
+				background-color: #5aae8d;
 			}
 
 			.statistics li.style3 {
-				background-color: #a89cc8;
+				background-color: #74bc90;
 			}
 
 			.statistics li.style4 {
-				background-color: #9bb2e1;
+				background-color: #074F57;
 			}
 
 			.statistics li.style5 {
-				background-color: #8cc9f0;
+				background-color: #16703d;
 			}
 
 			.statistics li strong, .statistics li b {
@@ -3431,7 +3431,7 @@
 			#main input[type="button"].special,
 			#main button.special,
 			#main .button.special {
-				background-color: #8cc9f0;
+				background-color: #16703d;
 				color: #ffffff !important;
 				box-shadow: none;
 			}
@@ -3561,10 +3561,10 @@
 
 		#main header.major h2:after {
 			background-color: #dddddd;
-			background-image: -moz-linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
-			background-image: -webkit-linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
-			background-image: -ms-linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
-			background-image: linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
+			background-image: -moz-linear-gradient(90deg, #074F57, #7BAE7F, #419D78);
+			background-image: -webkit-linear-gradient(90deg, #074F57, #7BAE7F, #419D78);
+			background-image: -ms-linear-gradient(90deg, #074F57, #7BAE7F, #419D78);
+			background-image: linear-gradient(90deg, #074F57, #7BAE7F, #419D78);
 		}
 
 		#main table tbody tr {
