--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -11,3 +11,94 @@
 #main .button:hover {
     color: #ffffff !important;
 }
+
+.feature {
+    display: -moz-flex;
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex;
+    -moz-align-items: center;
+    -webkit-align-items: center;
+    -ms-align-items: center;
+    align-items: center;
+    margin: 0 0 2em 0;
+}
+
+    .feature .content {
+        -moz-flex: 1;
+        -webkit-flex: 1;
+        -ms-flex: 1;
+        flex: 1;
+    }
+
+        .feature .content > :last-child {
+            margin-bottom: 0;
+        }
+
+        .feature .content header.major {
+            margin: 0 0 2em 0;
+        }
+
+    .feature .image {
+        display: inline-block;
+        margin-right: 1em;
+        padding: 0.65em;
+        border-radius: 100%;
+        border: solid 1px;
+    }
+
+        .feature .image img {
+            display: block;
+            border-radius: 100%;
+            width: 16em;
+        }
+
+    @media screen and (max-width: 980px) {
+
+        .feature {
+            -moz-flex-direction: column-reverse;
+            -webkit-flex-direction: column-reverse;
+            -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+            text-align: center;
+        }
+
+            .feature .content {
+                -moz-flex: 0 1 auto;
+                -webkit-flex: 0 1 auto;
+                -ms-flex: 0 1 auto;
+                flex: 0 1 auto;
+                width: 100%;
+            }
+
+                .feature .content header.major h2:after {
+                    margin-left: auto;
+                    margin-right: auto;
+                }
+
+            .feature .image {
+                -moz-flex: 0 1 auto;
+                -webkit-flex: 0 1 auto;
+                -ms-flex: 0 1 auto;
+                flex: 0 1 auto;
+                margin-left: 0;
+                margin-bottom: 2em;
+            }
+
+    }
+
+    @media screen and (max-width: 736px) {
+
+        .feature .image {
+            padding: 0.35em;
+        }
+
+            .feature .image img {
+                width: 12em;
+            }
+
+    }
+
+.feature .image {
+    border-color: rgba(0, 0, 0, 0.1);
+}
